<resources>
    <string name="app_name">Mis Eventos</string>

    <string name="lbl_for_Filtros">Filtros de la lista de eventos</string>
    <string name="chk_Fecha">Fecha (Ascendente)</string>
    <string name="action_settings">Settings</string>
    <string name="action_Salir">Salir</string>
    <string name="action_AgregarEvento">Agregar evento</string>
    <string name="action_VerListaEventos">Lista de eventos</string>

    <string-array name="filtro_dias">
        <item>Todos los días</item>
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miércoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sabado</item>
        <item>Domingo</item>
    </string-array>

    <string-array name="tipo_eventos_filtro">
        <item>Todos</item>
        <item>Web</item>
        <item>Móvil</item>
        <item>Videojuegos</item>
    </string-array>

    <!-- ACTIVITY AGREGAR EVENTO -->
    <string name="txt_NombreEvento">Nombre del evento</string>
    <string name="txt_DescripcionEvento">Descripción del evento</string>
    <string name="activityName_AgregarEvento">Nuevo Evento</string>
    <string name="lbl_for_Calendar">Seleccione la fecha:</string>
    <string name="lbl_for_TimePicker">Seleccione la hora</string>
    <string name="lbl_for_TipoEvento">Tipo de Evento</string>
    <string name="action_GuaradarEvento">Guardar Evento</string>
    <string name="action_Cancelar">Cancelar</string>
    <string name="action_Actualizar">Actualizar</string>
    <string name="lbl_spn_DiaSemana">Dia de la semana</string>
    <string name="activityName_ListaEventos">Todos los eventos</string>
    <string name="action_EditarEvento">Editar Evento</string>
    <string name="action_Eliminar">Eliminar</string>
    <string name="action_AddToMyEvents">Agregar a mis eventos</string>
    <string name="popup_AddToMisEventos">Agrear a Mis Eventos</string>
    <string name="activityName_EditarEvento">Editar evento</string>

    <string-array name="tipo_eventos_array">
        <item>Web</item>
        <item>Móvil</item>
        <item>Videojuegos</item>
    </string-array>


</resources>
