<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gmail.cesarcanojmz.miseventos.AgregarEvento">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/il_NombreEvento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <EditText
                android:id="@+id/txt_NombreEvento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_NombreEvento"
                android:inputType="textPersonName"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/il_DescripcionEvento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/txt_DescripcionEvento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_DescripcionEvento"
                android:inputType="textMultiLine|textPersonName"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/colorAccent"
            android:text="@string/lbl_for_Calendar"/>

        <DatePicker
            android:id="@+id/dateP_DiaEvento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:datePickerMode="calendar">
        </DatePicker>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/colorAccent"
            android:text="@string/lbl_for_TimePicker"/>
        <TimePicker
            android:id="@+id/timeP_HoraEvento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner">
        </TimePicker>

    </LinearLayout>

</ScrollView>
