<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.gmail.cesarcanojmz.miseventos.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_for_Filtros"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_for_TipoEvento"/>
    <Spinner
        android:id="@+id/spn_TipoEventoFiltro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        </Spinner>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_spn_DiaSemana"/>
    <Spinner
        android:id="@+id/spn_DiaSemana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/lbl_NoHayEventos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No hay nada en Mis Eventos"
            android:visibility="visible" />

        <ListView
            android:id="@+id/lv_listaMisEventos"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:visibility="gone">
        </ListView>

    </LinearLayout>
</LinearLayout>
